welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:1: error: Missing closing brace `}' assumed here
def maxValue(nums:Array[Int]): Int = {
^maxValue:15: error: expected class or object definition
def max (a:Int , b:Int): Int = {
^