welcome.lessons.welcome.array.maxvalue.MaxValue.scala.code
def maxValue(nums:Array[Int]): Int = {
	var p:Int
	p= max(nums(0),nums(1));
	for ( i<-2 to nums.length -1 ){
		p = max(p,nums(i))
	}
	return p ;
}






def max (a:Int , b:Int): Int = {
	return   (  (a + b + Math.abs(b - a))/2);